# Buddio

./: .gitignore  CONTEXT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  README.pt-BR.md  index.html  package.json
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  release.yml
crates/audio-engine/: Cargo.toml
crates/audio-engine/src/: cache.rs  command.rs  decode.rs  device.rs  engine.rs  error.rs  event.rs  handle.rs  lib.rs  loudness.rs  mic_meter.rs  mic_mix.rs  mic_route.rs  source.rs  vad.rs  volume.rs
docs/: release.md
docs/architecture/: overview.md
docs/design/: Buddio_Design_System_UX.md
e2e/: wdio.conf.mjs  wdio.routeerror.conf.mjs  wdio.shared.mjs
e2e/helpers/: appActions.mjs  dbFixture.mjs  ensureMsEdgeDriver.mjs
e2e/specs/: main-app.e2e.mjs  mic-route.e2e.mjs  mini-app.e2e.mjs  onboarding-route-error.e2e.mjs  onboarding.e2e.mjs
scripts/: build-app-icon.mjs  fetch-vbcable.ps1  gen-bindings.ts  with-cargo.mjs
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/resources/vbcable/: README.md
src-tauri/src/: fake_devices.rs  i18n.rs  lib.rs  main.rs  models.rs
src-tauri/src/commands/: mod.rs
src-tauri/src/db/: mod.rs
src-tauri/src/managers/: backup.rs  collections.rs  folder_watch.rs  hotkey_allocator.rs  hotkeys.rs  library.rs  mod.rs  nsis_update.rs  profiles.rs  settings.rs  virtual_cable.rs
src-tauri/windows/: hooks.nsh
src/components/: AudioEditorModal.tsx  ClipIcon.test.tsx  ClipIcon.tsx  CommandPalette.tsx  DiagnosticsModal.tsx  EmojiPicker.test.tsx  EmojiPicker.tsx  HelpDiagnosticsModal.test.tsx  HelpDiagnosticsModal.tsx  HotkeyRecorder.tsx  ImportDropzone.tsx  ImportReviewModal.test.tsx  ImportReviewModal.tsx  OnboardingModal.tsx  PadCard.tsx  PadGrid.tsx  UpdateAvailableModal.tsx  Waveform.tsx
src/i18n/: en.ts  i18n.test.ts  index.ts  pt.ts  seedNames.ts  types.ts
src/lib/: api.ts  bindings.ts  clipIcon.test.ts  clipIcon.ts  nativeShell.ts  routeHealth.test.ts  routeHealth.ts  smartCollections.test.ts  smartCollections.ts  updates.test.ts  updates.ts
src/mini/: MiniApp.tsx
src/stores/: collectionsStore.ts  helpStore.test.ts  helpStore.ts  libraryStore.ts  playbackStore.ts  profilesStore.ts  settingsStore.ts  toastStore.ts  uiStore.ts  updateStore.ts
src/views/: Library.tsx  Profiles.tsx  Routing.tsx  Settings.tsx  (+1 more)
(+21 files in other folders)
