[workspace]
resolver = "2"
members = ["src-tauri", "crates/audio-engine"]

[workspace.package]
edition = "2021"
license = "MIT"
version = "0.1.0"

[workspace.dependencies]
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tracing = "0.1"
sha2 = "0.10"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "fs", "time"] }
rusqlite = { version = "0.32", features = ["bundled"] }
audio-engine = { path = "crates/audio-engine" }
