[package]
name = "buddio"
version = "1.0.0"
description = "Buddio — offline-first soundboard with global hotkeys"
authors = ["Buddio Contributors"]
edition = "2021"
license = "MIT"

[lib]
name = "buddio_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["devtools", "tray-icon", "image-png"] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
tauri-plugin-single-instance = "2"
tauri-plugin-log = "2"
tauri-plugin-autostart = "2"
global-hotkey = "0.8"
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
sha2 = { workspace = true }
tokio = { workspace = true }
rusqlite = { workspace = true }
audio-engine = { workspace = true }
specta = { version = "2.0.0-rc.22", features = ["derive", "chrono"] }
specta-typescript = "0.0.9"
tauri-specta = { version = "2.0.0-rc.21", features = ["derive", "typescript"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }
parking_lot = "0.12"
log = "0.4"
walkdir = "2"
notify = "7"

[dev-dependencies]
tempfile = "3"
